--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/Kingfisher"]
 	path = modules/Kingfisher
 	url = https://github.com/onevcat/Kingfisher.git
+[submodule "modules/system-prompts"]
+	path = modules/system-prompts
+	url = https://github.com/x1xhlol/system-prompts-and-models-of-ai-tools
