--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "modules/cc-switch"]
 	path = modules/cc-switch
 	url = https://github.com/farion1231/cc-switch
+[submodule "modules/agent-skills"]
+	path = modules/agent-skills
+	url = https://github.com/vercel-labs/agent-skills
