Add module: OpenClaw personal AI assistant and guide

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "modules/obsidian-skills"]
 	path = modules/obsidian-skills
 	url = https://github.com/kepano/obsidian-skills
+[submodule "modules/openclaw"]
+	path = modules/openclaw
+	url = https://github.com/openclaw/openclaw
