--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "modules/anthropics-skills"]
 	path = modules/anthropics-skills
 	url = https://github.com/anthropics/skills.git
+[submodule "modules/shadcn-ui"]
+	path = modules/shadcn-ui
+	url = https://github.com/shadcn-ui/ui
